[package]
name = "chip8"
version = "0.1.0"
edition = "2021"
authors = ["Kaan Büyükerdem"]
description = "Yet another chip8 emulator written in rust"
readme = "README.md"
repository = "https://github.com/kaanyalova/chip8/"
license = "GPL-3.0"
keywords = ["chip8", "emulator"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_off"] }
rand = "0.8.5"
sdl2 = { version = "0.35.2", features = ["gfx"] }
simplelog = "0.12.0"
